fix hover state sticking on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,6 @@ a {
 p a, figcaption a {
     text-decoration: underline;
 }
-p a:hover, figcaption a:hover {
-    color: var(--blue2);
-}
 .button {
     display: flex;
     justify-content: center;
@@ -62,9 +59,6 @@ p a:hover, figcaption a:hover {
     font-weight: 700;
     color: white;
     background-color: var(--blue);
-}
-.button:hover, #back-to-top:hover{
-    background-color: var(--blue2);
 }
 .button:active, #back-to-top:active {
     background-color: var(--blue3);
@@ -121,10 +115,7 @@ nav {
     color: black;
     background-color: var(--white);
 }
-#menu a:hover {
-    color: var(--blue2);
-    text-decoration: underline;
-}
+
 #menu a:active {
     background-color: var(--blue3);
     color: var(--blue);
@@ -256,9 +247,17 @@ footer p {
     background-color: var(--blue);
     color: white;
 }
-
-
-
+@media (hover: hover) {
+    #menu a:hover, p a:hover {
+        color: var(--blue2);
+        text-decoration: underline;
+        cursor: pointer;
+    }
+    .button:hover, #back-to-top:hover{
+        background-color: var(--blue2);
+        cursor: pointer;
+    }
+}
 @media (min-width: 530px) {
     .color-bg {
         background-color: var(--white);
@@ -279,10 +278,7 @@ footer p {
     #menu a {
         background-color: unset;
     }
-    #menu a:hover {
-        background-color: unset;
-        cursor: pointer;
-    }
+    
     #menu a:active {
         color: var(--blue3);
     }
